--- a/features/navigation/build.gradle
+++ b/features/navigation/build.gradle
@@ -1,25 +1,19 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
 }
 
 android {
-    namespace 'com.example.myapplication'
+    namespace 'com.example.navigation'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.myapplication"
         minSdk 26
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -35,36 +29,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     buildFeatures {
         compose true
-        dataBinding true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
     }
 
-    packagingOptions {
-        resources {
-            excludes += "/META-INF/{AL2.0,LGPL2.1}"
-            merges += "META-INF/LICENSE.md"
-            merges += "META-INF/LICENSE-notice.md"
-            merges += "META-INF/NOTICE.md"
-        }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.3.2'
     }
 }
 
 dependencies {
-
-    implementation 'androidx.databinding:databinding-compiler-common:8.1.4'
-    implementation project(path: ':features:navigation')
-    constraints {
-        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
-            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
-        }
-        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
-            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
-        }
-    }
 
     // Dependency Injection
     implementation("com.google.dagger:hilt-android:2.44.2")
@@ -113,6 +88,5 @@ dependencies {
 
     implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha10"
 
-    implementation(project(":features:navigation"))
-    implementation(project(":features:authentication"))
+    implementation 'javax.inject:javax.inject:1'
 }
