--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs'
+    id "org.jetbrains.kotlin.plugin.serialization"
 }
 
 android {
@@ -75,6 +76,8 @@ dependencies {
         }
     }
 
+
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
     // Dependency Injection
     implementation("com.google.dagger:hilt-android:2.48")
     kapt("com.google.dagger:hilt-android-compiler:2.46.1")
@@ -101,7 +104,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     //Navigation
-    def nav_version = "2.6.0"
+    def nav_version = "2.8.0-alpha08"
     implementation("androidx.navigation:navigation-compose:$nav_version")
 
     // Lifecycle
