--- a/features/authentication/build.gradle
+++ b/features/authentication/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     //Navigation
-    def nav_version = "2.7.6"
+    def nav_version = "2.8.0-alpha08"
     implementation("androidx.navigation:navigation-compose:$nav_version")
 
     // Lifecycle
