--- a/features/navigation/build.gradle
+++ b/features/navigation/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
+    // other plugins
+    id "org.jetbrains.kotlin.plugin.serialization"
 }
 
 android {
@@ -43,6 +45,7 @@ dependencies {
 
     // Dependency Injection
 
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2")
     implementation("com.google.dagger:hilt-android:2.48")
     kapt("com.google.dagger:hilt-android-compiler:2.46.1")
     implementation("androidx.hilt:hilt-work:1.1.0")
@@ -69,7 +72,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     //Navigation
-    def nav_version = "2.7.6"
+    def nav_version = "2.8.0-alpha08"
     implementation("androidx.navigation:navigation-compose:$nav_version")
 
     // Lifecycle
